@@ -2,6 +2,8 @@
  * fixed scan_dir() by replacing use of non portable member of structure
    dirent by the use of stat(). This should fix problems encountered on
    Solaris 8.
+ * fixed our strlcpy().
+ * fixed CPP and CC values in pmkcfg.sh script.
 
 30 Jun 2005 mreindl
  * include config.h in compat/pmk_sys_types.h.
